ElementRareData should trace ResizeObservers

As the spec said[1], we have to make sure that ResizeObserver remains
alive when the observer is observing a target. Before this CL we don't
trace ResizeObserver from ElementRareData which caused miscollection
of ResizeObserver.

[1] https://wicg.github.io/ResizeObserver/#lifetime

BUG=735830

Change-Id: I66c7a7544936345d27d81bde741df474abc17097
Reviewed-on: https://chromium-review.googlesource.com/608982
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Commit-Queue: Kenichi Ishibashi <bashi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493241}
Former-commit-id: 850ef295da299a0912606a9244494f03eb113d5e